# dataton-mipt

./: .gitignore  LICENSE  README.md  app.py  config.example.yaml  main.py  pyproject.toml  settings.py  tasks.py  werf.yaml
.github/workflows/: ci.yml  lint.yml
.helm/: Chart.yaml  secret-values.yaml  values.yaml
api_models/: crud.py  models.py
async_queue/: __init__.py  queue.py
config/: __init__.py  config.py
model/: database.py  models.py  schemas.py
notificator/: __init__.py  abstract.py  telegram.py
notificators/: __init__.py  abstract.py  email.py  telegram.py
predictor/: __init__.py  abstract.py  mock.py
predictors/: __init__.py  abstract.py  beach_garbage.py  mock.py
predictors/templates/: beach.md
static/: styles.css
templates/: index.html
video_parser/: __init__.py  abstract.py  test.py  youtube.py
video_parsers/: abstract.py  youtube.py
