[tool.poetry]
name = "dataton-mipt"
version = "0.1.0"
description = ""
authors = ["alex123012 <makhonin.a.ru@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
opencv-python = "^4.8.1.78"
vidgear = "^0.3.2"
yt-dlp = "^2023.11.16"
pydantic = "^2.5.2"
pyyaml = "^6.0.1"
python-telegram-bot = "^20.7"


[tool.poetry.group.dev.dependencies]
mypy = "^1.5.1"
black = "^23.9.1"
pylint = "^3.0.1"
ruff = "^0.0.292"
types-pyyaml = "^6.0.12.12"
types-requests = "^2.31.0.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
ignore_missing_imports = true

[tool.ruff]
line-length = 120

[tool.pylint]
disable = "C0115,C0114,C0116,R0903,W0201"
max-line-length = 120

[tool.black]
line-length = 120